--- a/LuxorClient/src/main/java/poker/app/view/PokerTable.fxml
+++ b/LuxorClient/src/main/java/poker/app/view/PokerTable.fxml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.effect.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane fx:id="OuterBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="615.0" prefWidth="1350.0" style="-fx-background-color: green;" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poker.app.view.PokerTableController">
+<BorderPane fx:id="OuterBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="615.0" prefWidth="1350.0" style="-fx-background-color: green;" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poker.app.view.PokerTableController">
    <bottom>
       <HBox alignment="CENTER" prefHeight="109.0" prefWidth="850.0" style="-fx-background-color: green;" BorderPane.alignment="CENTER">
          <children>
@@ -110,7 +117,7 @@
    <center>
       <AnchorPane nodeOrientation="LEFT_TO_RIGHT" prefHeight="406.0" prefWidth="610.0" BorderPane.alignment="CENTER">
          <children>
-            <GridPane layoutX="123.0" layoutY="138.0" prefHeight="130.0" prefWidth="274.0">
+            <GridPane layoutX="123.0" layoutY="138.0" prefHeight="130.0" prefWidth="287.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="152.0" minWidth="10.0" prefWidth="40.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="207.0" minWidth="10.0" prefWidth="207.0" />
@@ -120,13 +127,14 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <HBox prefHeight="70.0" prefWidth="243.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <children>
                         <Button id="btnStartGame" fx:id="btnStartGame" mnemonicParsing="false" onAction="#btnStart_Click" prefWidth="80.0" text="Start" />
                         <Button id="btnDeal" mnemonicParsing="false" onAction="#btnDeal_Click" prefWidth="80.0" text="Deal" />
                      </children>
                   </HBox>
                   <HBox id="hBoxDeck" fx:id="hBoxDeck" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1" />
+                  <Button id="btnDeal" mnemonicParsing="false" onAction="#btnDeal_Click" prefHeight="26.0" prefWidth="135.0" text="Draw" GridPane.columnIndex="1" />
                </children>
             </GridPane>
             <Button id="btnGetState" layoutX="191.0" layoutY="287.0" mnemonicParsing="false" onAction="#GetGameState" text="Get State" />
